{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 23,
  "lineage": "fd892738-40c9-ebc4-101c-755692d6daeb",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07568cdb7e8bbb3ba",
            "arn": "arn:aws:ec2:us-east-1:975050024946:elastic-ip/eipalloc-07568cdb7e8bbb3ba",
            "association_id": "eipassoc-099f1f65a7942471a",
            "domain": "vpc",
            "id": "eipalloc-07568cdb7e8bbb3ba",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0fabcf8265dca5869",
            "private_dns": "ip-10-1-1-95.ec2.internal",
            "private_ip": "10.1.1.95",
            "public_dns": "ec2-54-161-99-227.compute-1.amazonaws.com",
            "public_ip": "54.161.99.227",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050024946:internet-gateway/igw-0558b8138b4e050b2",
            "id": "igw-0558b8138b4e050b2",
            "owner_id": "975050024946",
            "tags": {
              "Name": "learning-dev-igw"
            },
            "tags_all": {
              "Name": "learning-dev-igw"
            },
            "vpc_id": "vpc-027003118a3fba2a2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07568cdb7e8bbb3ba",
            "association_id": "eipassoc-099f1f65a7942471a",
            "connectivity_type": "public",
            "id": "nat-01f20ab1f1f52d50c",
            "network_interface_id": "eni-0fabcf8265dca5869",
            "private_ip": "10.1.1.95",
            "public_ip": "54.161.99.227",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-063676c7c7abb25ab",
            "tags": {
              "Name": "learning-dev-nat-gateway"
            },
            "tags_all": {
              "Name": "learning-dev-nat-gateway"
            }
          },
          "dependencies": [
            "aws_eip.nat_gateway_eip",
            "aws_internet_gateway.igw",
            "aws_subnet.public_subnet1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-03601db7025440bb71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-01f20ab1f1f52d50c",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03601db7025440bb7",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_gateway_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private_rt",
            "aws_subnet.public_subnet1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0558b8138b4e050b2",
            "id": "r-rtb-080eafe1bcfc266691080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-080eafe1bcfc26669",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050024946:route-table/rtb-03601db7025440bb7",
            "id": "rtb-03601db7025440bb7",
            "owner_id": "975050024946",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-01f20ab1f1f52d50c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "learning-dev-priv-rt"
            },
            "tags_all": {
              "Name": "learning-dev-priv-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-027003118a3fba2a2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050024946:route-table/rtb-080eafe1bcfc26669",
            "id": "rtb-080eafe1bcfc26669",
            "owner_id": "975050024946",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0558b8138b4e050b2",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "learning-dev-pub-rt"
            },
            "tags_all": {
              "Name": "learning-dev-pub-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-027003118a3fba2a2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_association1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-090cb07b725f6e6c9",
            "route_table_id": "rtb-03601db7025440bb7",
            "subnet_id": "subnet-04ac82ced56741b73"
          },
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_subnet.private_subnet1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_association2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cb4c4bf815f2c4f6",
            "route_table_id": "rtb-03601db7025440bb7",
            "subnet_id": "subnet-0559ec996cad49ff4"
          },
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_subnet.private_subnet2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_rt_association1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0622b32fa01debc9f",
            "route_table_id": "rtb-080eafe1bcfc26669",
            "subnet_id": "subnet-063676c7c7abb25ab"
          },
          "dependencies": [
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_rt_association2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-056417fc278853e3e",
            "route_table_id": "rtb-080eafe1bcfc26669",
            "subnet_id": "subnet-0e2ec33fb7a890766"
          },
          "dependencies": [
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050024946:subnet/subnet-04ac82ced56741b73",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.1.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04ac82ced56741b73",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "975050024946",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "learning-dev-priv-subnet1"
            },
            "tags_all": {
              "Name": "learning-dev-priv-subnet1"
            },
            "vpc_id": "vpc-027003118a3fba2a2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050024946:subnet/subnet-0559ec996cad49ff4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.1.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0559ec996cad49ff4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "975050024946",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "learning-dev-priv-subnet2"
            },
            "tags_all": {
              "Name": "learning-dev-priv-subnet2"
            },
            "vpc_id": "vpc-027003118a3fba2a2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050024946:subnet/subnet-063676c7c7abb25ab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-063676c7c7abb25ab",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "975050024946",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "learning-dev-pub-subnet1"
            },
            "tags_all": {
              "Name": "learning-dev-pub-subnet1"
            },
            "vpc_id": "vpc-027003118a3fba2a2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050024946:subnet/subnet-0e2ec33fb7a890766",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e2ec33fb7a890766",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "975050024946",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "learning-dev-pub-subnet2"
            },
            "tags_all": {
              "Name": "learning-dev-pub-subnet2"
            },
            "vpc_id": "vpc-027003118a3fba2a2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050024946:vpc/vpc-027003118a3fba2a2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0be5c364be8948c62",
            "default_route_table_id": "rtb-0a5f1eb49093ba95b",
            "default_security_group_id": "sg-09c6a0356eb4d951f",
            "dhcp_options_id": "dopt-01bcbcfd314f7b3cd",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-027003118a3fba2a2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a5f1eb49093ba95b",
            "owner_id": "975050024946",
            "tags": {
              "Name": "learning-dev-vpc"
            },
            "tags_all": {
              "Name": "learning-dev-vpc"
            }
          }
        }
      ]
    }
  ]
}